@@ -20,7 +20,10 @@ import com.epam.reportportal.base.core.tms.dto.TmsMilestoneRQ;
 import com.epam.reportportal.base.core.tms.dto.TmsMilestoneRS;
 import com.epam.reportportal.base.core.tms.dto.TmsTestPlanRS;
 import com.epam.reportportal.base.core.tms.mapper.TmsMilestoneMapper;
+import com.epam.reportportal.base.infrastructure.persistence.commons.querygen.Filter;
+import com.epam.reportportal.base.infrastructure.persistence.commons.querygen.FilterCondition;
 import com.epam.reportportal.base.infrastructure.persistence.dao.tms.TmsMilestoneRepository;
+import com.epam.reportportal.base.infrastructure.persistence.dao.tms.filterable.TmsMilestoneFilterableRepository;
 import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsMilestone;
 import com.epam.reportportal.base.infrastructure.rules.exception.ErrorType;
 import com.epam.reportportal.base.infrastructure.rules.exception.ReportPortalException;
@@ -47,7 +50,10 @@ class TmsMilestoneServiceImplTest {
 
   @Mock
   private TmsMilestoneRepository tmsMilestoneRepository;
-
+  
+  @Mock
+  private TmsMilestoneFilterableRepository tmsMilestoneFilterableRepository;
+  
   @Mock
   private TmsTestPlanService tmsTestPlanService;
 
@@ -244,51 +250,55 @@ class TmsMilestoneServiceImplTest {
   @Test
   void getAll_WhenMilestonesExist_ShouldReturnPage() {
     // Given
+    var filter = mock(Filter.class);
+  
     var milestone1 = new TmsMilestone();
     milestone1.setId(100L);
     milestone1.setName("Release 1.0");
-
+  
     var milestone2 = new TmsMilestone();
     milestone2.setId(200L);
     milestone2.setName("Release 2.0");
-
+  
     var testPlan1 = new TmsTestPlanRS();
     testPlan1.setId(1L);
     var testPlan2 = new TmsTestPlanRS();
     testPlan2.setId(2L);
-
+  
     var testPlansByMilestones = new HashMap<Long, List<TmsTestPlanRS>>();
     testPlansByMilestones.put(100L, List.of(testPlan1));
     testPlansByMilestones.put(200L, List.of(testPlan2));
-
+  
     var milestoneRS1 = new TmsMilestoneRS();
     milestoneRS1.setId(100L);
     milestoneRS1.setName("Release 1.0");
     milestoneRS1.setTestPlans(List.of(testPlan1));
-
+  
     var milestoneRS2 = new TmsMilestoneRS();
     milestoneRS2.setId(200L);
     milestoneRS2.setName("Release 2.0");
     milestoneRS2.setTestPlans(List.of(testPlan2));
-
-    var milestonesPage = new PageImpl<>(
-        List.of(milestone1, milestone2),
+  
+    var milestoneIdsPage = new PageImpl<>(
+        List.of(100L, 200L),
         pageable,
         2
     );
-
-    when(tmsMilestoneRepository.findAllByProjectId(projectId, pageable))
-        .thenReturn(milestonesPage);
+  
+    when(tmsMilestoneFilterableRepository.findIdsByProjectIdAndFilter(projectId, filter, pageable))
+        .thenReturn(milestoneIdsPage);
+    when(tmsMilestoneRepository.findAllById(List.of(100L, 200L)))
+        .thenReturn(List.of(milestone1, milestone2));
     when(tmsTestPlanService.getByMilestoneIds(projectId, List.of(100L, 200L)))
         .thenReturn(testPlansByMilestones);
     when(tmsMilestoneMapper.convert(milestone1, List.of(testPlan1)))
         .thenReturn(milestoneRS1);
     when(tmsMilestoneMapper.convert(milestone2, List.of(testPlan2)))
         .thenReturn(milestoneRS2);
-
+  
     // When
-    var result = sut.getAll(projectId, pageable);
-
+    var result = sut.getAll(projectId, filter, pageable);
+  
     // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
@@ -296,38 +306,38 @@ class TmsMilestoneServiceImplTest {
     assertEquals(1L, result.getPage().getNumber());
     assertEquals(2L, result.getPage().getTotalElements());
     assertEquals(1L, result.getPage().getTotalPages());
-
+  
     var milestones = result.getContent().stream().toList();
-    assertEquals(100L, milestones.get(0).getId());
+    assertEquals(100L, milestones.getFirst().getId());
     assertEquals("Release 1.0", milestones.get(0).getName());
     assertEquals(1, milestones.get(0).getTestPlans().size());
     assertEquals(200L, milestones.get(1).getId());
     assertEquals("Release 2.0", milestones.get(1).getName());
     assertEquals(1, milestones.get(1).getTestPlans().size());
-
-    verify(tmsMilestoneRepository).findAllByProjectId(projectId, pageable);
+  
+    verify(tmsMilestoneFilterableRepository).findIdsByProjectIdAndFilter(projectId, filter, pageable);
+    verify(tmsMilestoneRepository).findAllById(List.of(100L, 200L));
     verify(tmsTestPlanService).getByMilestoneIds(projectId, List.of(100L, 200L));
     verify(tmsMilestoneMapper).convert(milestone1, List.of(testPlan1));
     verify(tmsMilestoneMapper).convert(milestone2, List.of(testPlan2));
   }
-
+  
   @Test
   void getAll_WhenNoMilestones_ShouldReturnEmptyPage() {
     // Given
-    var emptyPage = new PageImpl<TmsMilestone>(
+    var filter = mock(Filter.class);
+    var emptyPage = new PageImpl<Long>(
         Collections.emptyList(),
         pageable,
         0
     );
-
-    when(tmsMilestoneRepository.findAllByProjectId(projectId, pageable))
+  
+    when(tmsMilestoneFilterableRepository.findIdsByProjectIdAndFilter(projectId, filter, pageable))
         .thenReturn(emptyPage);
-    when(tmsTestPlanService.getByMilestoneIds(projectId, Collections.emptyList()))
-        .thenReturn(Collections.emptyMap());
-
+  
     // When
-    var result = sut.getAll(projectId, pageable);
-
+    var result = sut.getAll(projectId, filter, pageable);
+  
     // Then
     assertNotNull(result);
     assertEquals(0, result.getContent().size());
@@ -335,45 +345,49 @@ class TmsMilestoneServiceImplTest {
     assertEquals(1L, result.getPage().getNumber());
     assertEquals(0L, result.getPage().getTotalElements());
     assertEquals(0L, result.getPage().getTotalPages());
-
-    verify(tmsMilestoneRepository).findAllByProjectId(projectId, pageable);
-    verify(tmsTestPlanService).getByMilestoneIds(projectId, Collections.emptyList());
+  
+    verify(tmsMilestoneFilterableRepository).findIdsByProjectIdAndFilter(projectId, filter, pageable);
+    verify(tmsMilestoneRepository, never()).findAllById(anyList());
+    verify(tmsTestPlanService, never()).getByMilestoneIds(anyLong(), anyList());
     verify(tmsMilestoneMapper, never()).convert(any(TmsMilestone.class), anyList());
   }
-
+  
   @Test
   void getAll_WithCustomPageable_ShouldReturnCorrectPage() {
     // Given
     var customPageable = PageRequest.of(2, 5);
-
+    var filter = mock(Filter.class);
+  
     var milestone = new TmsMilestone();
     milestone.setId(milestoneId);
     milestone.setName("Release 3.0");
-
+  
     var testPlans = Collections.<TmsTestPlanRS>emptyList();
     var testPlansByMilestones = Map.of(milestoneId, testPlans);
-
+  
     var milestoneRS = new TmsMilestoneRS();
     milestoneRS.setId(milestoneId);
     milestoneRS.setName("Release 3.0");
     milestoneRS.setTestPlans(testPlans);
-
-    var milestonesPage = new PageImpl<>(
-        List.of(milestone),
+  
+    var milestoneIdsPage = new PageImpl<>(
+        List.of(milestoneId),
         customPageable,
         15
     );
-
-    when(tmsMilestoneRepository.findAllByProjectId(projectId, customPageable))
-        .thenReturn(milestonesPage);
+  
+    when(tmsMilestoneFilterableRepository.findIdsByProjectIdAndFilter(projectId, filter, customPageable))
+        .thenReturn(milestoneIdsPage);
+    when(tmsMilestoneRepository.findAllById(List.of(milestoneId)))
+        .thenReturn(List.of(milestone));
     when(tmsTestPlanService.getByMilestoneIds(projectId, List.of(milestoneId)))
         .thenReturn(testPlansByMilestones);
     when(tmsMilestoneMapper.convert(milestone, testPlans))
         .thenReturn(milestoneRS);
-
+  
     // When
-    var result = sut.getAll(projectId, customPageable);
-
+    var result = sut.getAll(projectId, filter, customPageable);
+  
     // Then
     assertNotNull(result);
     assertEquals(1, result.getContent().size());
@@ -381,66 +395,72 @@ class TmsMilestoneServiceImplTest {
     assertEquals(3L, result.getPage().getNumber());
     assertEquals(15L, result.getPage().getTotalElements());
     assertEquals(3L, result.getPage().getTotalPages());
-
-    verify(tmsMilestoneRepository).findAllByProjectId(projectId, customPageable);
+  
+    verify(tmsMilestoneFilterableRepository).findIdsByProjectIdAndFilter(projectId, filter, customPageable);
+    verify(tmsMilestoneRepository).findAllById(List.of(milestoneId));
     verify(tmsTestPlanService).getByMilestoneIds(projectId, List.of(milestoneId));
     verify(tmsMilestoneMapper).convert(milestone, testPlans);
   }
-
+  
   @Test
   void getAll_WhenMilestonesExistWithoutTestPlans_ShouldReturnMilestonesWithEmptyTestPlans() {
     // Given
+    var filter = mock(Filter.class);
+  
     var milestone1 = new TmsMilestone();
     milestone1.setId(100L);
     milestone1.setName("Release 1.0");
-
+  
     var milestone2 = new TmsMilestone();
     milestone2.setId(200L);
     milestone2.setName("Release 2.0");
-
+  
     var emptyTestPlans = Collections.<TmsTestPlanRS>emptyList();
     var testPlansByMilestones = Map.of(
         100L, emptyTestPlans,
         200L, emptyTestPlans
     );
-
+  
     var milestoneRS1 = new TmsMilestoneRS();
     milestoneRS1.setId(100L);
     milestoneRS1.setName("Release 1.0");
     milestoneRS1.setTestPlans(emptyTestPlans);
-
+  
     var milestoneRS2 = new TmsMilestoneRS();
     milestoneRS2.setId(200L);
     milestoneRS2.setName("Release 2.0");
     milestoneRS2.setTestPlans(emptyTestPlans);
-
-    var milestonesPage = new PageImpl<>(
-        List.of(milestone1, milestone2),
+  
+    var milestoneIdsPage = new PageImpl<>(
+        List.of(100L, 200L),
         pageable,
         2
     );
-
-    when(tmsMilestoneRepository.findAllByProjectId(projectId, pageable))
-        .thenReturn(milestonesPage);
+  
+    when(tmsMilestoneFilterableRepository.findIdsByProjectIdAndFilter(projectId, filter, pageable))
+        .thenReturn(milestoneIdsPage);
+    when(tmsMilestoneRepository.findAllById(List.of(100L, 200L)))
+        .thenReturn(List.of(milestone1, milestone2));
     when(tmsTestPlanService.getByMilestoneIds(projectId, List.of(100L, 200L)))
         .thenReturn(testPlansByMilestones);
     when(tmsMilestoneMapper.convert(milestone1, emptyTestPlans))
         .thenReturn(milestoneRS1);
     when(tmsMilestoneMapper.convert(milestone2, emptyTestPlans))
         .thenReturn(milestoneRS2);
-
+  
     // When
-    var result = sut.getAll(projectId, pageable);
-
+    var result = sut.getAll(projectId, filter, pageable);
+  
     // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
-
+  
     var milestones = result.getContent().stream().toList();
     assertTrue(milestones.get(0).getTestPlans().isEmpty());
     assertTrue(milestones.get(1).getTestPlans().isEmpty());
-
-    verify(tmsMilestoneRepository).findAllByProjectId(projectId, pageable);
+  
+    verify(tmsMilestoneFilterableRepository).findIdsByProjectIdAndFilter(projectId, filter, pageable);
+    verify(tmsMilestoneRepository).findAllById(List.of(100L, 200L));
     verify(tmsTestPlanService).getByMilestoneIds(projectId, List.of(100L, 200L));
     verify(tmsMilestoneMapper).convert(milestone1, emptyTestPlans);
     verify(tmsMilestoneMapper).convert(milestone2, emptyTestPlans);
